[package]
name = "usb_scale"
version = "0.1.0"
authors = ["Benjamin Faerber"]
license = "MIT"
edition = "2021"
keywords = ["usb", "scale", "weight", "iot", "device"]
description = "Interact with USB Scales with Rust"
readme = "README.md"
homepage = "https://github.com/benfaerber/usb-scale"
repository = "https://github.com/benfaerber/usb-scale"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hidapi = "2.3.3"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]